@@ -1,5 +1,11 @@
 2021-05-17 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/stm8/gen.c,
+	  src/z80/gen.c:
+	  Refactor __z88dk_callee support to allow other calling conventions to use callee stack cleanup.
+
+2021-05-17 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/SDCCicode.h,
 	  src/SDCCicode.c,
 	  src/SDCCsalloc.hpp,
